--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <title>GESTORÍA VEHICULAR CDMX, EdoMex y Morelos #1 2026 | Refrendo Morelos | Placas, Licencias | Gestor de Autos
     </title>
     <meta name="description"
-        content="Gestoría vehicular en CDMX, Estado de México y Morelos. Refrendo vehicular Morelos 2026 desde $300. Expertos en alta de placas, licencias, reemplacamiento 2026, cambios de propietario. Servicio 100% online.">
+        content="Gestoría vehicular líder en CDMX y EdoMex. Tramitamos Licencia Permanente Tipo A CDMX, Alta de Placas, y Reemplacamiento EdoMex 2026. Servicio rápido y 100% seguro para autos y motos.">
     <meta name="keywords"
-        content="refrendo morelos 2026, costo refrendo morelos 2026, pagar refrendo morelos en línea, refrendo vehicular morelos, requisitos refrendo morelos, trámite refrendo morelos, refrendo tarjeta circulación morelos, tenencia morelos 2026, gestoría vehicular cdmx, gestoria vehicular estado de mexico, placas edomex, tramites vehiculares chalco, gestoria vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, cambio de propietario estado de mexico, tramites vehiculares interlomas, gestoria vehicular tlalnepantla, ecatepec, cuautitlan izcalli, reemplacamiento edomex 2026, gestor de autos, alta vehicular cdmx, baja vehicular, permiso provisional para circular">
+        content="alta de placas edomex 2026, licencia permanente cdmx, reemplacamiento edomex 2026, alta de placas cdmx 2026, baja de placas edomex, cambio de propietario cdmx, permiso provisional para circular, legalización de autos, repuve, refrendo morelos 2026, costo refrendo morelos 2026, pagar refrendo morelos en línea, gestoria vehicular estado de mexico, placas edomex, tramites vehiculares chalco, gestoria vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, tramites vehiculares interlomas, gestoria vehicular tlalnepantla, ecatepec, cuautitlan izcalli, gestor de autos">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -122,11 +122,12 @@
             "@type": "OfferCatalog",
             "name": "Servicios Vehiculares",
             "itemListElement": [
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Alta de Placas Estado de México y CDMX", "serviceType": "Legal" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Licencia de Conducir EdoMex y CDMX", "serviceType": "Legal" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Alta de Placas CDMX y EdoMex 2026", "serviceType": "Legal" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Licencia Permanente Tipo A CDMX", "serviceType": "Legal" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Reemplacamiento EdoMex 2026", "serviceType": "Legal" } },
               { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Cambio de Propietario EdoMex y CDMX", "serviceType": "Legal" } },
               { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Regularización REPUVE y Autos Extranjeros", "serviceType": "Legal" } },
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestoría Vehicular Hidalgo y Morelos", "serviceType": "Legal" } }
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Refrendo Vehicular Morelos 2026", "serviceType": "Legal" } }
             ]
           }
         },
@@ -135,10 +136,10 @@
           "mainEntity": [
             {
               "@type": "Question",
-              "name": "¿Cuál es la mejor gestoría vehicular en CDMX?",
+              "name": "¿Cómo tramitar la Licencia Permanente Tipo A en CDMX?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "Gestor de Autos es reconocida como la mejor opción por su rapidez y trámites 100% online en CDMX y EdoMex. Evita filas para placas y licencias."
+                "text": "La Licencia Permanente CDMX sigue disponible en 2026. Gestor de Autos te ayuda a tramitarla de forma rápida y segura, evitando filas y 'coyotes' no verificados."
               }
             },
             {
@@ -327,10 +328,10 @@
                         </span>
                         <span
                             style="font-family: 'Yellowtail', cursive; font-size: 1.5em; color: #fbbf24; text-shadow: 2px 2px 0 #000; display: block; margin-top: 1rem;">
-                            Expertos en Placas y Licencias
+                            Expertos en Placas y Licencia Permanente
                         </span>
                     </h1>
-                    <p><strong data-i18n="hero_desc_bold">¿Buscas placas o licencias?</strong> <span
+                    <p><strong data-i18n="hero_desc_bold">¿Buscas Placas o Licencia Permanente?</strong> <span
                             data-i18n="hero_desc_text">Somos expertos en <b>Trámites del Estado de México en línea</b>.
                             Sin filas, sin citas presenciales. Cubrimos <b>EdoMex, CDMX, Chalco e Interlomas</b>.</span>
                     </p>
@@ -505,6 +506,14 @@
                             </div>
                         </div>
 
+                        <div class="service-item premium-item">
+                            <div class="service-icon"><i class="fas fa-sync-alt"></i></div>
+                            <div>
+                                <h4>Reemplacamiento EdoMex 2026</h4>
+                                <small>Renovación obligatoria placas 2021</small>
+                            </div>
+                        </div>
+
                         <div class="service-item">
                             <div class="service-icon"><i class="fas fa-exchange-alt"></i></div>
                             <div>
@@ -555,8 +564,8 @@
                             <div class="service-header">
                                 <div class="service-icon"><i class="fas fa-id-card"></i></div>
                                 <div>
-                                    <h4>Licencias de Conducir EdoMex y CDMX</h4>
-                                    <small>Todos los tipos y clasificaciones</small>
+                                    <h4>Licencias y Permanente Tipo A CDMX</h4>
+                                    <small>Tramitamos tu Licencia Permanente</small>
                                 </div>
                             </div>
                             <div class="service-tags">
@@ -881,6 +890,18 @@
                                 realizamos tu <strong>reemplacamiento EdoMex online</strong> rápido y seguro.</p>
                         </div>
                         <div class="faq-item">
+                            <h3>¿Cómo tramitar la Licencia Permanente Tipo A en CDMX?</h3>
+                            <p>La <strong>Licencia Permanente CDMX</strong> sigue disponible en 2026. Nosotros te
+                                ayudamos a agendar tu cita y gestionar el pago de derechos para asegurar tu trámite
+                                exitoso.</p>
+                        </div>
+                        <div class="faq-item">
+                            <h3>¿Cuándo toca el reemplacamiento 2026 en Edomex?</h3>
+                            <p>El programa de <strong>reemplacamiento Edomex 2026</strong> inicia en el segundo
+                                semestre. Es obligatorio para placas expedidas en 2021. ¡Contáctanos para pre-registrate
+                                y evitar multas!</p>
+                        </div>
+                        <div class="faq-item">
                             <h3>¿Atienden urgencias de placas en Interlomas?</h3>
                             <p>Sí, brindamos atención prioritaria en <strong>Interlomas y Huixquilucan</strong>. Podemos
                                 gestionar tus placas y entregarlas en tu domicilio en tiempo récord.</p>
@@ -1127,8 +1148,8 @@
                         <!-- Review Card 6 -->
                         <div class="review-card">
                             <p class="review-text">"Excelente atención personalizada. Resolvieron mi problema de
-                                tenencias
-                                atrasadas en días."</p>
+                                trámites
+                                atrasados en días."</p>
                             <div class="review-stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
