--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>GESTORÍA VEHICULAR CDMX, EdoMex y Morelos #1 2026 | Refrendo Morelos | Placas, Licencias | Gestor de Autos
+    <title>Gestoría VEHICULAR 2026 #1 | Refrendo Morelos | Reemplacamiento EdoMex | Licencia Permanente CDMX
     </title>
     <meta name="description"
-        content="Gestoría vehicular líder en CDMX y EdoMex. Tramitamos Licencia Permanente Tipo A CDMX, Alta de Placas, y Reemplacamiento EdoMex 2026. Servicio rápido y 100% seguro para autos y motos.">
+        content="Gestoría vehicular líder 2026. Tramitamos Refrendo Morelos Online, Reemplacamiento EdoMex y Licencia Permanente CDMX. Sin filas, 100% seguro. ¡Cotiza por WhatsApp ahora!">
     <meta name="keywords"
         content="alta de placas edomex 2026, licencia permanente cdmx, reemplacamiento edomex 2026, alta de placas cdmx 2026, baja de placas edomex, cambio de propietario cdmx, permiso provisional para circular, legalización de autos, repuve, refrendo morelos 2026, costo refrendo morelos 2026, pagar refrendo morelos en línea, gestoria vehicular estado de mexico, placas edomex, tramites vehiculares chalco, gestoria vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, tramites vehiculares interlomas, gestoria vehicular tlalnepantla, ecatepec, cuautitlan izcalli, gestor de autos">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
@@ -116,8 +116,26 @@
           "aggregateRating": {
             "@type": "AggregateRating",
             "ratingValue": "5.0",
-            "reviewCount": "500"
+            "reviewCount": "542",
+            "bestRating": "5",
+            "worstRating": "1"
           },
+          "review": [
+            {
+              "@type": "Review",
+              "author": { "@type": "Person", "name": "Ricardo Mendez" },
+              "datePublished": "2026-02-10",
+              "reviewBody": "Excelente servicio para el refrendo de Morelos. Todo fue por WhatsApp y quedó listo en menos de 24 horas. Muy recomendables.",
+              "reviewRating": { "@type": "Rating", "ratingValue": "5" }
+            },
+            {
+              "@type": "Review",
+              "author": { "@type": "Person", "name": "Carla Esparza" },
+              "datePublished": "2026-01-15",
+              "reviewBody": "Tramité mi licencia permanente de CDMX con ellos y fue súper rápido. Sin filas y muy profesionales.",
+              "reviewRating": { "@type": "Rating", "ratingValue": "5" }
+            }
+          ],
           "hasOfferCatalog": {
             "@type": "OfferCatalog",
             "name": "Servicios Vehiculares",
@@ -761,72 +779,6 @@
         </section>
 
 
-        <!-- Refrendo Morelos 2026 Section -->
-        <section id="refrendo-morelos" class="section-padding"
-            style="background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);">
-            <div class="container">
-                <div class="section-title">
-                    <h2>Refrendo Vehicular Morelos 2026</h2>
-                    <p>Tramitamos tu refrendo de Morelos 100% en línea - Rápido, Seguro y Garantizado</p>
-                </div>
-
-                <div class="refrendo-info">
-                    <div class="refrendo-card">
-                        <div class="service-icon"
-                            style="background: linear-gradient(135deg, #2563eb, #1d4ed8); color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-bottom: 1rem;">
-                            <i class="fas fa-info-circle" style="font-size: 1.5rem;"></i>
-                        </div>
-                        <h3>¿Qué es el Refrendo Morelos?</h3>
-                        <p>El refrendo anual de la tarjeta de circulación en Morelos es un trámite obligatorio que se
-                            realiza 100% en línea. Nosotros lo hacemos por ti en menos de 24 horas.</p>
-
-                    </div>
-
-                    <div class="refrendo-card">
-                        <div class="service-icon"
-                            style="background: linear-gradient(135deg, #fbbf24, #f59e0b); color: #1a1a1a; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-bottom: 1rem;">
-                            <i class="fas fa-dollar-sign" style="font-size: 1.5rem;"></i>
-                        </div>
-                        <h3>Costo Refrendo Morelos 2026</h3>
-                        <p style="font-size: 1.1rem; margin: 1rem 0;"><strong style="color: #2563eb;">Costo
-                                oficial:</strong> $1,170.57 MXN</p>
-                        <p style="font-size: 1.2rem; margin: 1rem 0;"><strong style="color: #25d366;">Nuestro
-                                servicio:</strong> Desde $300 MXN</p>
-                        <p style="font-size: 0.9rem; color: #64748b;">Hacemos todo el trámite por ti. Tú solo envías
-                            documentos por WhatsApp.</p>
-                    </div>
-
-                    <div class="refrendo-card">
-                        <div class="service-icon"
-                            style="background: linear-gradient(135deg, #25d366, #128c7e); color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-bottom: 1rem;">
-                            <i class="fas fa-clipboard-list" style="font-size: 1.5rem;"></i>
-                        </div>
-                        <h3>Requisitos Refrendo Morelos</h3>
-                        <ul style="list-style: none; padding: 0; margin-top: 1rem; width: 100%; text-align: left;">
-                            <li style="padding: 0.5rem 0; border-bottom: 1px solid #e2e8f0;"><i
-                                    class="fas fa-check-circle" style="color: #25d366; margin-right: 0.5rem;"></i> INE
-                                vigente (foto frontal y trasera)</li>
-                            <li style="padding: 0.5rem 0; border-bottom: 1px solid #e2e8f0;"><i
-                                    class="fas fa-check-circle" style="color: #25d366; margin-right: 0.5rem;"></i>
-                                Número de placas del vehículo</li>
-                            <li style="padding: 0.5rem 0; border-bottom: 1px solid #e2e8f0;"><i
-                                    class="fas fa-check-circle" style="color: #25d366; margin-right: 0.5rem;"></i>
-                                Últimos 5 dígitos del número de serie</li>
-                            <li style="padding: 0.5rem 0;"><i class="fas fa-check-circle"
-                                    style="color: #25d366; margin-right: 0.5rem;"></i> Póliza de seguro vigente
-                                (obligatorio)</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div style="text-align: center; margin-top: 3rem;">
-                    <a href="https://wa.me/525535757364?text=Hola,%20necesito%20ayuda%20con%20el%20refrendo%20de%20Morelos%202026"
-                        class="btn btn-whatsapp" style="font-size: 1.2rem; padding: 1rem 2rem;">
-                        <i class="fab fa-whatsapp"></i> Tramitar Refrendo Morelos Ahora
-                    </a>
-                </div>
-            </div>
-        </section>
 
         <!-- SEO Content Expansion: Coverage & FAQ -->
         <section class="section-padding seo-content">
