--- a/index.html
+++ b/index.html
@@ -436,6 +436,70 @@
             </div>
         </section>
 
+        <!-- Secciones de Alta Prioridad: Refrendo y Reemplacamiento -->
+        <section id="tramites-urgentes" class="section-padding"
+            style="background: #f8fafc; border-bottom: 1px solid #e2e8f0;">
+            <div class="container">
+                <div class="urgent-grid"
+                    style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 2rem;">
+
+                    <!-- Refrendo Morelos 2026 (DETALLADO) -->
+                    <div class="urgent-item"
+                        style="background: white; padding: 2.5rem; border-radius: 1.5rem; box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1); border: 2px solid #2563eb;">
+                        <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1.5rem;">
+                            <div
+                                style="background: #2563eb; color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.5rem;">
+                                <i class="fas fa-money-check-alt"></i>
+                            </div>
+                            <div>
+                                <h2 style="font-size: 1.6rem; margin: 0; color: #1e293b;">Refrendo Morelos 2026</h2>
+                                <small style="color: #2563eb; font-weight: 700;">¡TRÁMITE 100% ONLINE!</small>
+                            </div>
+                        </div>
+
+                        <div style="margin-bottom: 1.5rem;">
+                            <p style="margin: 0.5rem 0;"><strong>Costo oficial:</strong> $1,170.57 MXN</p>
+                            <p style="margin: 0.5rem 0; color: #16a34a;"><strong>Nuestro servicio:</strong> Desde $300
+                                MXN</p>
+                            <p style="font-size: 0.9rem; color: #64748b; margin-top: 1rem;">
+                                <strong>Requisitos:</strong> INE, Placas, 5 dígitos de Serie y Póliza de seguro.
+                                Lo tramitamos en menos de 24 horas.
+                            </p>
+                        </div>
+
+                        <a href="https://wa.me/525535757364?text=Hola,%20necesito%20pagar%20el%20refrendo%20de%20Morelos%202026"
+                            class="btn btn-whatsapp"
+                            style="width: 100%; justify-content: center; font-weight: 700; font-size: 1.1rem;">
+                            <i class="fab fa-whatsapp"></i> Pagar Refrendo Ahora
+                        </a>
+                    </div>
+
+                    <!-- Reemplacamiento EdoMex 2026 -->
+                    <div class="urgent-item"
+                        style="background: white; padding: 2.5rem; border-radius: 1.5rem; box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1); border: 2px solid #fbbf24;">
+                        <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1.5rem;">
+                            <div
+                                style="background: #fbbf24; color: #1a1a1a; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.5rem;">
+                                <i class="fas fa-sync-alt"></i>
+                            </div>
+                            <div>
+                                <h2 style="font-size: 1.6rem; margin: 0; color: #1e293b;">Reemplacamiento 2026</h2>
+                                <small style="color: #d97706; font-weight: 700;">PLACAS 2021 Y ANTERIORES</small>
+                            </div>
+                        </div>
+                        <p style="color: #64748b; margin-bottom: 1.5rem;">No arriesgues tu auto al corralón. El
+                            reemplacamiento 2026 en Edomex es obligatorio. <strong>¡Regularízate hoy!</strong></p>
+                        <a href="https://wa.me/525535757364?text=Hola,%20me%20interesa%20el%20reemplacamiento%20Edomex%202026"
+                            class="btn btn-primary"
+                            style="width: 100%; justify-content: center; background: #1a1a1a; color: white; border: none; font-weight: 700; font-size: 1.1rem;">
+                            Iniciar Reemplacamiento
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
         <!-- Stats Counter Script -->
         <!-- Stats Counter Logic moved to script.js -->
 
