--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <title>Gestoría VEHICULAR 2026 #1 | Refrendo Morelos | Reemplacamiento EdoMex | Licencia Permanente CDMX
     </title>
     <meta name="description"
-        content="Gestoría vehicular líder 2026. Tramitamos Refrendo Morelos Online, Reemplacamiento EdoMex y Licencia Permanente CDMX. Sin filas, 100% seguro. ¡Cotiza por WhatsApp ahora!">
+        content="Gestoría vehicular líder 2026. Refrendo Morelos y Guerrero Online, Reemplacamiento EdoMex, Licencia CDMX. Refacturas, Bajas y Altas de Empresas. ¡Cotiza por WhatsApp!">
     <meta name="keywords"
-        content="alta de placas edomex 2026, licencia permanente cdmx, reemplacamiento edomex 2026, alta de placas cdmx 2026, baja de placas edomex, cambio de propietario cdmx, permiso provisional para circular, legalización de autos, repuve, refrendo morelos 2026, costo refrendo morelos 2026, pagar refrendo morelos en línea, gestoria vehicular estado de mexico, placas edomex, tramites vehiculares chalco, gestoria vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, tramites vehiculares interlomas, gestoria vehicular tlalnepantla, ecatepec, cuautitlan izcalli, gestor de autos">
+        content="alta de placas edomex 2026, licencia permanente cdmx, reemplacamiento edomex 2026, alta de placas cdmx 2026, baja de placas edomex, cambio de propietario cdmx, permiso provisional para circular, legalización de autos, repuve, refrendo morelos 2026, refrendo guerrero 2026, refactura de vehiculos, gestoria para empresas, flotas vehiculares, placas guerrero costo, gestor de autos">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -194,10 +194,26 @@
             },
             {
               "@type": "Question",
-              "name": "¿Se puede tramitar un permiso provisional para circular sin placas?",
+              "name": "¿Tramitan permisos y placas de Guerrero?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "Sí, gestionamos permisos provisionales de 30 días válidos en toda la República Mexicana. Ideal para autos nuevos o vehículos en proceso de emplacamiento foráneo."
+                "text": "Sí, gestionamos permisos provisionales y alta de placas en Guerrero. Es una excelente opción para vehículos nuevos o trámites foráneos rápidos y económicos."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "¿Hacen trámites de refacturación vehicular?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Contamos con servicio de asesoría y gestión para refacturas, ideal para regularizar la propiedad de tu auto si perdiste documentos o necesitas actualizar la factura de origen."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "¿Tienen servicio para flotillas o parques vehiculares de empresas?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Sí, diseñamos planes especiales para empresas que necesitan gestionar múltiples unidades. Ofrecemos facturación de nuestro servicio y atención masiva."
               }
             }
           ]
@@ -436,7 +452,7 @@
         </section>
 
         <!-- Secciones de Alta Prioridad: Refrendo y Reemplacamiento -->
-        <section id="tramites-urgentes" class="section-padding"
+        <section id="tramites-urgentes" class="section-padding reveal"
             style="background: #f8fafc; border-bottom: 1px solid #e2e8f0;">
             <div class="container">
                 <div class="urgent-grid"
@@ -451,25 +467,55 @@
                                 <i class="fas fa-money-check-alt"></i>
                             </div>
                             <div>
-                                <h2 style="font-size: 1.6rem; margin: 0; color: #1e293b;">Refrendo Morelos 2026</h2>
-                                <small style="color: #2563eb; font-weight: 700;">¡TRÁMITE 100% ONLINE!</small>
+                                <h2 style="font-size: 1.6rem; margin: 0; color: #1e293b;">Refrendo Morelos 2026 -
+                                    Consulta y Pago en Línea</h2>
+                                <small style="color: #2563eb; font-weight: 700;">¡OBTÉN TU TARJETA DIGITAL
+                                    OFICIAL!</small>
                             </div>
                         </div>
 
                         <div style="margin-bottom: 1.5rem;">
+                            <p style="margin: 0.5rem 0; line-height: 1.6;">
+                                Olvida las filas. Realizamos tu <strong>pago de refrendo Morelos</strong> y te
+                                entregamos tu <strong>Tarjeta de Circulación Digital 2026</strong>. Nuestra gestión
+                                incluye la validación ante el sistema de ingresos de Morelos y la entrega del documento
+                                PDF oficial que puedes portar en tu celular o imprimir.
+                            </p>
+                            <div
+                                style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; margin: 1.5rem 0; text-align: center;">
+                                <div
+                                    style="background: #f8fafc; padding: 1rem; border-radius: 12px; border: 1px dashed #cbd5e1;">
+                                    <span
+                                        style="display: block; font-size: 0.8rem; color: #64748b; margin-bottom: 0.5rem;">TARJETA
+                                        FÍSICA (ANTERIOR)</span>
+                                    <div
+                                        style="height: 120px; background: #e2e8f0; border-radius: 8px; display: flex; align-items: center; justify-content: center; color: #94a3b8;">
+                                        <i class="fas fa-id-card fa-3x"></i>
+                                    </div>
+                                </div>
+                                <div
+                                    style="background: #f0fdf4; padding: 1rem; border-radius: 12px; border: 1px solid #bbf7d0;">
+                                    <span
+                                        style="display: block; font-size: 0.8rem; color: #16a34a; margin-bottom: 0.5rem;">NUEVA
+                                        TARJETA DIGITAL</span>
+                                    <div
+                                        style="height: 120px; background: #dcfce7; border-radius: 8px; display: flex; align-items: center; justify-content: center; color: #22c55e;">
+                                        <i class="fas fa-mobile-alt fa-3x"></i>
+                                    </div>
+                                </div>
+                            </div>
                             <p style="margin: 0.5rem 0;"><strong>Costo oficial:</strong> $1,170.57 MXN</p>
                             <p style="margin: 0.5rem 0; color: #16a34a;"><strong>Nuestro servicio:</strong> Desde $300
                                 MXN</p>
-                            <p style="font-size: 0.9rem; color: #64748b; margin-top: 1rem;">
-                                <strong>Requisitos:</strong> INE, Placas, 5 dígitos de Serie y Póliza de seguro.
-                                Lo tramitamos en menos de 24 horas.
+                            <p style="font-size: 0.85rem; color: #64748b; margin-top: 1rem; line-height: 1.4;">
+                                <strong>Requisitos:</strong> INE, Placas y Serie. Válida para circular en todo el país.
                             </p>
                         </div>
 
-                        <a href="https://wa.me/525535757364?text=Hola,%20necesito%20pagar%20el%20refrendo%20de%20Morelos%202026"
+                        <a href="https://wa.me/525535757364?text=Hola,%20necesito%20pagar%20el%20refrendo%20de%20Morelos%20y%20obtener%20mi%20tarjeta%20digital"
                             class="btn btn-whatsapp"
                             style="width: 100%; justify-content: center; font-weight: 700; font-size: 1.1rem;">
-                            <i class="fab fa-whatsapp"></i> Pagar Refrendo Ahora
+                            <i class="fab fa-whatsapp"></i> Pagar Refrendo y Recibir Tarjeta
                         </a>
                     </div>
 
@@ -507,7 +553,7 @@
 
 
         <!-- Services Section -->
-        <section id="servicios" class="section-padding services">
+        <section id="servicios" class="section-padding services reveal">
             <div class="container">
                 <div class="section-title">
                     <h2 data-i18n="services_title">Nuestros Servicios de Gestoría Vehicular</h2>
@@ -808,7 +854,7 @@
         </section>
 
         <!-- Pillars / Why Us -->
-        <section class="section-padding features">
+        <section class="section-padding features reveal">
             <div class="container">
                 <div class="features-layout">
                     <div class="features-grid">
@@ -844,7 +890,7 @@
 
 
         <!-- SEO Content Expansion: Coverage & FAQ -->
-        <section class="section-padding seo-content">
+        <section class="section-padding seo-content reveal">
             <div class="container">
                 <!-- Coverage List -->
                 <div class="seo-block">
@@ -941,10 +987,27 @@
                             </p>
                         </div>
                         <div class="faq-item">
-                            <h3>¿Qué requisitos necesito para el refrendo Morelos?</h3>
-                            <p>Los <strong>requisitos para el refrendo Morelos</strong> son: INE vigente (frontal y
-                                trasera), número de placas, últimos 5 dígitos del número de serie, y póliza de seguro
-                                (opcional). Nosotros validamos tus documentos antes de procesar.</p>
+                            <h3>¿Tramitan permisos y placas de Guerrero?</h3>
+                            <p>¡Claro! Somos expertos en <strong>placas de Guerrero</strong> y permisos provisionales.
+                                Es la opción favorita de muchos clientes por su bajo costo y rapidez. Lo hacemos sin que
+                                presentes el vehículo.</p>
+                        </div>
+                        <div class="faq-item">
+                            <h3>¿Me pueden ayudar con una Refactura de mi auto?</h3>
+                            <p>Sí, brindamos asesoría completa para <strong>refacturación vehicular</strong>. Si tienes
+                                dudas con tu factura de origen o necesitas regularizar el historial de propiedad para
+                                vender tu auto, nosotros te ayudamos.</p>
+                        </div>
+                        <div class="faq-item">
+                            <h3>¿Dan servicio de gestoría para empresas y flotillas?</h3>
+                            <p>Atendemos <strong>parques vehiculares y flotillas</strong> corporativas. Ofrecemos
+                                atención masiva, facturación de honorarios y reportes periódicos para el control
+                                vehicular de tu negocio.</p>
+                        </div>
+                        <div class="faq-item">
+                            <h3>¿Aceptan pagos con tarjeta de crédito o débito?</h3>
+                            <p>Sí, aceptamos transferencias y <strong>pagos con tarjeta</strong> para tu mayor comodidad
+                                y seguridad. Queremos que tu trámite sea lo más sencillo posible.</p>
                         </div>
                     </div>
                 </div>
@@ -1290,7 +1353,7 @@
         </section>
 
         <!-- New Trámites Garantizados Section -->
-        <section class="section-padding tramites-section">
+        <section class="section-padding tramites-section reveal">
             <div class="container">
                 <h2 class="section-heading">TRÁMITES VEHICULARES GARANTIZADOS</h2>
 
@@ -1388,7 +1451,7 @@
             </div>
         </section>
         <!-- Coverage Areas Section -->
-        <section class="section-padding coverage-section"
+        <section class="section-padding coverage-section reveal"
             style="background: #0f172a; color: white; text-align: center;">
             <div class="container">
                 <div class="section-title">
