--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <title>Gestoría VEHICULAR 2026 #1 | Refrendo Morelos | Reemplacamiento EdoMex | Licencia Permanente CDMX
     </title>
     <meta name="description"
-        content="Gestoría vehicular líder 2026. Refrendo Morelos y Guerrero Online, Reemplacamiento EdoMex, Licencia CDMX. Refacturas, Bajas y Altas de Empresas. ¡Cotiza por WhatsApp!">
+        content="Gestoría vehicular líder 2026. Tramitamos Refrendo Morelos Online, Reemplacamiento EdoMex y Licencia Permanente CDMX. Sin filas, 100% seguro. ¡Cotiza por WhatsApp ahora!">
     <meta name="keywords"
-        content="alta de placas edomex 2026, licencia permanente cdmx, reemplacamiento edomex 2026, alta de placas cdmx 2026, baja de placas edomex, cambio de propietario cdmx, permiso provisional para circular, legalización de autos, repuve, refrendo morelos 2026, refrendo guerrero 2026, refactura de vehiculos, gestoria para empresas, flotas vehiculares, placas guerrero costo, gestor de autos">
+        content="alta de placas edomex 2026, licencia permanente cdmx, reemplacamiento edomex 2026, alta de placas cdmx 2026, baja de placas edomex, cambio de propietario cdmx, permiso provisional para circular, legalización de autos, repuve, refrendo morelos 2026, costo refrendo morelos 2026, pagar refrendo morelos en línea, gestoria vehicular estado de mexico, placas edomex, tramites vehiculares chalco, gestoria vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, tramites vehiculares interlomas, gestoria vehicular tlalnepantla, ecatepec, cuautitlan izcalli, gestor de autos">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -194,26 +194,10 @@
             },
             {
               "@type": "Question",
-              "name": "¿Tramitan permisos y placas de Guerrero?",
+              "name": "¿Se puede tramitar un permiso provisional para circular sin placas?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "Sí, gestionamos permisos provisionales y alta de placas en Guerrero. Es una excelente opción para vehículos nuevos o trámites foráneos rápidos y económicos."
-              }
-            },
-            {
-              "@type": "Question",
-              "name": "¿Hacen trámites de refacturación vehicular?",
-              "acceptedAnswer": {
-                "@type": "Answer",
-                "text": "Contamos con servicio de asesoría y gestión para refacturas, ideal para regularizar la propiedad de tu auto si perdiste documentos o necesitas actualizar la factura de origen."
-              }
-            },
-            {
-              "@type": "Question",
-              "name": "¿Tienen servicio para flotillas o parques vehiculares de empresas?",
-              "acceptedAnswer": {
-                "@type": "Answer",
-                "text": "Sí, diseñamos planes especiales para empresas que necesitan gestionar múltiples unidades. Ofrecemos facturación de nuestro servicio y atención masiva."
+                "text": "Sí, gestionamos permisos provisionales de 30 días válidos en toda la República Mexicana. Ideal para autos nuevos o vehículos en proceso de emplacamiento foráneo."
               }
             }
           ]
@@ -449,99 +433,6 @@
                     </div>
                 </div>
             </div>
-        </section>
-
-        <!-- Secciones de Alta Prioridad: Refrendo y Reemplacamiento -->
-        <section id="tramites-urgentes" class="section-padding reveal"
-            style="background: #f8fafc; border-bottom: 1px solid #e2e8f0;">
-            <div class="container">
-                <div class="urgent-grid"
-                    style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 2rem;">
-
-                    <!-- Refrendo Morelos 2026 (DETALLADO) -->
-                    <div class="urgent-item"
-                        style="background: white; padding: 2.5rem; border-radius: 1.5rem; box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1); border: 2px solid #2563eb;">
-                        <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1.5rem;">
-                            <div
-                                style="background: #2563eb; color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.5rem;">
-                                <i class="fas fa-money-check-alt"></i>
-                            </div>
-                            <div>
-                                <h2 style="font-size: 1.6rem; margin: 0; color: #1e293b;">Refrendo Morelos 2026 -
-                                    Consulta y Pago en Línea</h2>
-                                <small style="color: #2563eb; font-weight: 700;">¡OBTÉN TU TARJETA DIGITAL
-                                    OFICIAL!</small>
-                            </div>
-                        </div>
-
-                        <div style="margin-bottom: 1.5rem;">
-                            <p style="margin: 0.5rem 0; line-height: 1.6;">
-                                Olvida las filas. Realizamos tu <strong>pago de refrendo Morelos</strong> y te
-                                entregamos tu <strong>Tarjeta de Circulación Digital 2026</strong>. Nuestra gestión
-                                incluye la validación ante el sistema de ingresos de Morelos y la entrega del documento
-                                PDF oficial que puedes portar en tu celular o imprimir.
-                            </p>
-                            <div
-                                style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; margin: 1.5rem 0; text-align: center;">
-                                <div
-                                    style="background: #f8fafc; padding: 1rem; border-radius: 12px; border: 1px dashed #cbd5e1;">
-                                    <span
-                                        style="display: block; font-size: 0.8rem; color: #64748b; margin-bottom: 0.5rem;">TARJETA
-                                        FÍSICA (ANTERIOR)</span>
-                                    <div
-                                        style="height: 120px; background: #e2e8f0; border-radius: 8px; display: flex; align-items: center; justify-content: center; color: #94a3b8;">
-                                        <i class="fas fa-id-card fa-3x"></i>
-                                    </div>
-                                </div>
-                                <div
-                                    style="background: #f0fdf4; padding: 1rem; border-radius: 12px; border: 1px solid #bbf7d0;">
-                                    <span
-                                        style="display: block; font-size: 0.8rem; color: #16a34a; margin-bottom: 0.5rem;">NUEVA
-                                        TARJETA DIGITAL</span>
-                                    <div
-                                        style="height: 120px; background: #dcfce7; border-radius: 8px; display: flex; align-items: center; justify-content: center; color: #22c55e;">
-                                        <i class="fas fa-mobile-alt fa-3x"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <p style="margin: 0.5rem 0;"><strong>Costo oficial:</strong> $1,170.57 MXN</p>
-                            <p style="margin: 0.5rem 0; color: #16a34a;"><strong>Nuestro servicio:</strong> Desde $300
-                                MXN</p>
-                            <p style="font-size: 0.85rem; color: #64748b; margin-top: 1rem; line-height: 1.4;">
-                                <strong>Requisitos:</strong> INE, Placas y Serie. Válida para circular en todo el país.
-                            </p>
-                        </div>
-
-                        <a href="https://wa.me/525535757364?text=Hola,%20necesito%20pagar%20el%20refrendo%20de%20Morelos%20y%20obtener%20mi%20tarjeta%20digital"
-                            class="btn btn-whatsapp"
-                            style="width: 100%; justify-content: center; font-weight: 700; font-size: 1.1rem;">
-                            <i class="fab fa-whatsapp"></i> Pagar Refrendo y Recibir Tarjeta
-                        </a>
-                    </div>
-
-                    <!-- Reemplacamiento EdoMex 2026 -->
-                    <div class="urgent-item"
-                        style="background: white; padding: 2.5rem; border-radius: 1.5rem; box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1); border: 2px solid #fbbf24;">
-                        <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1.5rem;">
-                            <div
-                                style="background: #fbbf24; color: #1a1a1a; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.5rem;">
-                                <i class="fas fa-sync-alt"></i>
-                            </div>
-                            <div>
-                                <h2 style="font-size: 1.6rem; margin: 0; color: #1e293b;">Reemplacamiento 2026</h2>
-                                <small style="color: #d97706; font-weight: 700;">PLACAS 2021 Y ANTERIORES</small>
-                            </div>
-                        </div>
-                        <p style="color: #64748b; margin-bottom: 1.5rem;">No arriesgues tu auto al corralón. El
-                            reemplacamiento 2026 en Edomex es obligatorio. <strong>¡Regularízate hoy!</strong></p>
-                        <a href="https://wa.me/525535757364?text=Hola,%20me%20interesa%20el%20reemplacamiento%20Edomex%202026"
-                            class="btn btn-primary"
-                            style="width: 100%; justify-content: center; background: #1a1a1a; color: white; border: none; font-weight: 700; font-size: 1.1rem;">
-                            Iniciar Reemplacamiento
-                        </a>
-                    </div>
-
-                </div>
             </div>
         </section>
 
@@ -553,7 +444,7 @@
 
 
         <!-- Services Section -->
-        <section id="servicios" class="section-padding services reveal">
+        <section id="servicios" class="section-padding services">
             <div class="container">
                 <div class="section-title">
                     <h2 data-i18n="services_title">Nuestros Servicios de Gestoría Vehicular</h2>
@@ -854,7 +745,7 @@
         </section>
 
         <!-- Pillars / Why Us -->
-        <section class="section-padding features reveal">
+        <section class="section-padding features">
             <div class="container">
                 <div class="features-layout">
                     <div class="features-grid">
@@ -890,7 +781,7 @@
 
 
         <!-- SEO Content Expansion: Coverage & FAQ -->
-        <section class="section-padding seo-content reveal">
+        <section class="section-padding seo-content">
             <div class="container">
                 <!-- Coverage List -->
                 <div class="seo-block">
@@ -987,27 +878,10 @@
                             </p>
                         </div>
                         <div class="faq-item">
-                            <h3>¿Tramitan permisos y placas de Guerrero?</h3>
-                            <p>¡Claro! Somos expertos en <strong>placas de Guerrero</strong> y permisos provisionales.
-                                Es la opción favorita de muchos clientes por su bajo costo y rapidez. Lo hacemos sin que
-                                presentes el vehículo.</p>
-                        </div>
-                        <div class="faq-item">
-                            <h3>¿Me pueden ayudar con una Refactura de mi auto?</h3>
-                            <p>Sí, brindamos asesoría completa para <strong>refacturación vehicular</strong>. Si tienes
-                                dudas con tu factura de origen o necesitas regularizar el historial de propiedad para
-                                vender tu auto, nosotros te ayudamos.</p>
-                        </div>
-                        <div class="faq-item">
-                            <h3>¿Dan servicio de gestoría para empresas y flotillas?</h3>
-                            <p>Atendemos <strong>parques vehiculares y flotillas</strong> corporativas. Ofrecemos
-                                atención masiva, facturación de honorarios y reportes periódicos para el control
-                                vehicular de tu negocio.</p>
-                        </div>
-                        <div class="faq-item">
-                            <h3>¿Aceptan pagos con tarjeta de crédito o débito?</h3>
-                            <p>Sí, aceptamos transferencias y <strong>pagos con tarjeta</strong> para tu mayor comodidad
-                                y seguridad. Queremos que tu trámite sea lo más sencillo posible.</p>
+                            <h3>¿Qué requisitos necesito para el refrendo Morelos?</h3>
+                            <p>Los <strong>requisitos para el refrendo Morelos</strong> son: INE vigente (frontal y
+                                trasera), número de placas, últimos 5 dígitos del número de serie, y póliza de seguro
+                                (opcional). Nosotros validamos tus documentos antes de procesar.</p>
                         </div>
                     </div>
                 </div>
@@ -1353,7 +1227,7 @@
         </section>
 
         <!-- New Trámites Garantizados Section -->
-        <section class="section-padding tramites-section reveal">
+        <section class="section-padding tramites-section">
             <div class="container">
                 <h2 class="section-heading">TRÁMITES VEHICULARES GARANTIZADOS</h2>
 
@@ -1451,7 +1325,7 @@
             </div>
         </section>
         <!-- Coverage Areas Section -->
-        <section class="section-padding coverage-section reveal"
+        <section class="section-padding coverage-section"
             style="background: #0f172a; color: white; text-align: center;">
             <div class="container">
                 <div class="section-title">
